--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> vai ser uma imagem aqui</h1> 
+    <img src="Capa80 (1).png" alt="">
+<p>O Dia Nacional do Trânsito — 25 de setembro — é uma data criada com o objetivo de promover a conscientização da população quanto à adoção de ações para um trânsito seguro. Esse dia, assim como toda a Semana Nacional do Trânsito, está atrelado à promulgação do Código de Trânsito Brasileiro (CTB).
+
+Por meio desse código, estabeleceu-se a definição legal de trânsito e suas normativas. Esse documento é uma importante ferramenta de implementação de medidas seguras no trânsito brasileiro. O Brasil tem um dos trânsitos mais violentos de todo o mundo.
+ Dessa forma, torna-se necessário a adoção de medidas legais, assim como a adoção de boas práticas de direção que versem pela maior segurança de motoristas e pedestres.</p>
 </body>
 </html>
